<resources>
    <string name="app_name">TCT</string>
    <string name="bottom_information_customer">Новости</string>
    <string name="bottom_basket_customer">Каталог</string>
    <string name="bottom_account_customer">Профиль</string>
    <string name="email_textview">Почта</string>
    <string name="password_textview">Пароль</string>
    <string name="button_sing_in">Войти</string>
    <string name="answer_label">Забыли пароль?</string>
    <string name="reset_pas"><u>Восстановить</u></string>
    <string name="about_label">О компании</string>
    <string name="latest_news_label">Новости</string>
    <string name="button_news_read">Читать</string>
    <string name="about_company_info">ТСТ - это</string>
    <string name="mission_company_info">Миссия компании ООО \"ТСТ\"</string>
    <string name="motto_company_info">Девиз компании ООО \"ТСТ\"</string>
    <string name="value_company_info">Наши ценности:</string>
    <string name="catalog_label">КАТАЛОГ</string>
    <string name="about_delivery">Трубы поставляются:</string>
    <string name="about_areas_of_use">Области применения</string>
    <string name="advantages">Преимущества</string>
    <string name="main_characteristics">Характеристики</string>
    <string name="button_buy">Купить</string>
    <string name="design">Конструкция</string>
    <string name="sing_in_label">Авторизация</string>
    <string name="sing_up_label">Регистрация</string>
    <string name="sing_in_hint_email">Введите почту</string>
    <string name="sing_in_hint_phone">Телефон: +7/8хххххххххх</string>
    <string name="sing_in_hint_password">Введите пароль</string>
    <string name="name_hint_sing_up">Как к Вам обращаться?</string>
    <string name="password_repeat_hint_sing_up">Повторите пароль</string>
    <string name="go_to_sin_up_label"><u>Зарегистрироваться?</u></string>
    <string name="btn_sin_up_">Зарегистрироваться</string>
    <string name="error_msg_name">Введите имя</string>
    <string name="error_msg_confirm_password">Введите повторный пароль</string>
    <string name="error_msg_password_length">Длина пароля не меньше 6 символов</string>
    <string name="error_msg_password_not">Пароли не совпали</string>
    <string name="error_msg_email_in">Неверный формат почты</string>
    <string name="error_msg_phone_in">Неверный формат номера телефона</string>
    <string name="error_user_create">Такой пользователь уже существует</string>
    <string name="msg_user_create">Успешная регистрация</string>
    <string name="error_user_sing_in">Проверьте данные</string>
    <string name="error_msg_email">Проверьте почту</string>
    <string name="error_msg_phone">Проверьте пароль</string>
    <string name="title_alert_d">Сброс пароля</string>
    <string name="btn_close_text">Закрыть</string>
    <string name="btn_reset_text">Отправить</string>
    <string name="msg_reset_true">Письмо отправлено</string>
    <string name="msg_reset_false">Проверьте почту</string>
    <string name="label_for_name">Ваше имя</string>
    <string name="sub_label_for_data_user">Учетные данные</string>
    <string name="label_for_phone">Телефон</string>
    <string name="label_for_email">Почта</string>
    <string name="sub_label_for_oreder">Заказы</string>
    <string name="label_for_oreder">История заявок</string>
    <string name="label_for_branch">Город</string>
    <string name="sub_label_for_contacts">Контакты</string>
    <string name="label_for_contacts">Контактная информация</string>
    <string name="sub_label_for_account">Аккаунт</string>
    <string name="label_for_account_change">Изменить данные</string>
    <string name="label_for_account_log_out">Выйти из аккаунта</string>
    <string name="btn_cancel">Назад</string>
    <string name="btn_done">Сохранить</string>
    <string name="label_account">Мои данные</string>
    <string name="label_name">Имя</string>
    <string name="hint_phone">8хххххххххх</string>
    <string name="hint_email">example@gmail.com</string>
    <string name="msg_error_change">Проверьте данные!</string>
    <string name="msg_successful_change">Данные обновлены!</string>
    <string name="label_address">Офис</string>
    <string name="label_for_work_hours">Часы работы</string>
    <string name="label_info1">Связаться с нами:</string>
    <string name="label_info2">8 800 551 09 61</string>
    <string name="label_info3">С контактной информацией можно ознакомиться в профиле.</string>
    <string name="title_add_alert_d">Добавление в корзину</string>
    <string name="msg_exist_goods">Товар уже в корзине</string>
    <string name="msg_not_chose">Выбирите тип</string>
    <string name="label_cart">Комментарий к заявке</string>
    <string name="label_cart1">Товар:</string>
    <string name="hint_for_comment">Введите дополнительную информацию</string>
    <string name="label_empty_cart">Отсутствует товар</string>
    <string name="btn_create_applying">Оформить</string>
    <string name="btn_send_applying">Отправить заявку</string>
    <string name="msg_not_auth">Пожалуйста авторизуйтесь</string>
    <string name="msg_empty_cart">Отсутсвует товар</string>
    <string name="dialog_text_create_order">Сообщение</string>
    <string name="btn_dialog_create">Хорошо</string>
    <string name="dialog_text_create_order1">Заказ создан, скоро с Вами свяжется менеджер</string>
    <string name="label_order_from">Заявка от</string>
    <string name="label_order_comment">Комментарий</string>
    <string name="label_no_orders">У Вас еще не было заявок</string>
</resources>