<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".customer.account.MainProfileFragment">

    <!-- шапка страницы -->
    <TextView
        android:text="@string/bottom_account_customer"
        style="@style/ReadNews" />
    <!--Разделитель-->
    <LinearLayout
        style="@style/LinearLayoutLine" >
    </LinearLayout>

    <!-- Имя поль-ля-->
    <TextView
        android:layout_marginTop="10dp"
        style="@style/ProfileText"
        android:text="@string/label_for_name"/>
    <TextView
        android:id="@+id/nameShow"
        android:text="Имя пользователя"
        style="@style/MainTextProfileText" />


    <TextView
        style="@style/ProfileText"
        android:layout_marginTop="10dp"
        android:text="@string/label_for_phone"/>
    <TextView
        android:id="@+id/phoneShow"
        android:text="89223784909"
        style="@style/MainTextProfileText" />

    <TextView
        style="@style/ProfileText"
        android:layout_marginTop="10dp"
        android:text="@string/label_for_email"/>
    <TextView
        android:id="@+id/emailShow"
        android:text="viktoria.ivashova.04@mail.ru"
        style="@style/MainTextProfileText" />
    <TextView
        style="@style/ProfileText"
        android:layout_marginTop="10dp"
        android:text="@string/label_for_branch"/>
    <TextView
        android:id="@+id/branchShow"
        android:text="Санкт-Петербург"
        style="@style/MainTextProfileText" />


    <!--Просмотр заказов-->
    <TextView
        style="@style/ProfileText.Sub"
        android:layout_marginTop="35dp"
        android:text="@string/sub_label_for_oreder"/>
    <TextView
        android:text="@string/label_for_oreder"
        style="@style/MainTextProfileText" />

    <!--Просмотр контактной информации-->
    <TextView
        style="@style/ProfileText.Sub"
        android:layout_marginTop="35dp"
        android:text="@string/sub_label_for_contacts"/>

    <TextView
        android:text="@string/label_for_contacts"
        android:id="@+id/showContacts"
        style="@style/MainTextProfileText" />


    <!--Управление аккаунтв-->
    <TextView
        style="@style/ProfileText.Sub"
        android:layout_marginTop="35dp"
        android:text="@string/sub_label_for_account"/>

    <TextView
        android:id="@+id/goToUpdate"
        android:text="@string/label_for_account_change"
        style="@style/MainTextProfileText.Click" />

    <TextView
        android:id="@+id/singOut"
        android:text="@string/label_for_account_log_out"
        android:textColor="@color/red_t"
        android:layout_marginTop="5dp"
        style="@style/MainTextProfileText.Click" />

</LinearLayout>