<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".customer.catalog.cart.ApplyingBottomSheetFragment">

    <TextView
        style="@style/BottomSheetTextView.Main"
        android:gravity="center"
        android:layout_marginStart="0dp"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:text="Проверьте свои данне перед отправкой заявки"/>
    <!--отображаем имя пользователя-->
    <LinearLayout
        android:layout_marginTop="90dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/BottomSheetTextView"
            android:text="@string/label_for_name" />

        <TextView
            android:id="@+id/nameUser"
            style="@style/BottomSheetTextView.Main"
            android:text="@string/label_for_name"
            android:layout_marginStart="15dp" />
    </LinearLayout>

    <!--отображаем номер телефона пользователя-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:orientation="horizontal">
        <TextView
            style="@style/BottomSheetTextView"
            android:text="@string/label_for_phone" />
        <TextView
            android:id="@+id/phoneUser"
            android:text="@string/hint_phone"
            android:layout_marginStart="26dp"
            style="@style/BottomSheetTextView.Main"/>
    </LinearLayout>
    <!--Отображение почты пользователя-->
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/llEmail"
        android:layout_height="wrap_content"
        android:layout_marginTop="162dp"
        android:orientation="horizontal">
        <TextView
            style="@style/BottomSheetTextView"
            android:text="@string/label_for_email" />
        <TextView
            android:id="@+id/emailUser"
            android:layout_marginStart="20dp"
            android:text="@string/hint_email"
            style="@style/BottomSheetTextView.Main"/>
    </LinearLayout>

    <!--кнопка для оформления заказа-->
    <Button
        android:id="@+id/btnSendEmail"
        style="@style/MyButtonMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:gravity="center_horizontal"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/background_button_buy"
        android:text="@string/btn_send_applying"
        android:theme="@style/MyButtonMain" />

</RelativeLayout>