<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".customer.SingInCustomerFragment"
    android:background="@color/background">

    <!--логотип компании-->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="107dp"
        android:layout_height="105dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/lg" />

    <!--Сообщение об вв-->
    <TextView
        style="@style/LabelAnswer"
        android:layout_marginTop="40dp"
        android:text="@string/about_enter" />

    <TextView
        style="@style/SingIn"
        android:layout_marginTop="40dp"
        android:text="@string/email_textview" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input"
        style="@style/MyTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit"
            style="@style/MyEditText.Email"  />
    </com.google.android.material.textfield.TextInputLayout>



    <!--ввод пароля-->
    <TextView
        style="@style/SingIn"
        android:layout_marginTop="15dp"
        android:text="@string/password_textview" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input"
        style="@style/MyTextField.Password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit"
            style="@style/MyEditText.Password" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--кнопка входа-->
    <Button
        android:id="@+id/button_sing_in"
        android:text="@string/button_sing_in"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:theme="@style/MyButtonMain"
        style="@style/MyButtonMain"/>

    <!--востановление пароля-->
    <TextView
        style="@style/LabelAnswer"
        android:layout_marginTop="25dp"
        android:text="@string/answer_label" />

    <TextView
        android:id="@+id/go_to"
        style="@style/LabelAnswer.LabelAnswer1"
        android:text="@string/reset_pas" />

</LinearLayout>