<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".customer.catalog.cart.CartShowFragment">
    <!--Кнопка для возвращения к главной категории-->
    <ImageView
        android:id="@+id/backToMainCategory"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_gravity="start"
        app:srcCompat="@drawable/back_button_news" />

    <TextView
        style="@style/FontForCart"
        android:text="@string/label_cart" />

    <EditText
        android:id="@+id/commentForApplyEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="10"
        android:minLines="5"
        android:layout_margin="10dp"
        android:gravity="top|left"
        android:background="@drawable/edittext_bg"
        android:maxLines="10"
        android:textSize="16sp"

        android:textColorHint="@color/color_bottom"
        android:hint="@string/hint_for_comment"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/label1"
        style="@style/FontForCart"
        android:text="@string/label_cart1" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <!-- список с актуальными новостями -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_recyclerView"
        android:layout_marginStart="11dp"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        tools:listitem="@layout/item_cart_show"/>
    <TextView
        android:id="@+id/emptyCart"
        style="@style/FontForCart"
        android:textSize="35sp"
        android:layout_marginStart="0dp"
        android:textColor="@color/color_bottom"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="160dp"
        android:text="@string/label_empty_cart" />
   </FrameLayout>

    <!--кнопка для оформления заказа-->
    <Button
        android:id="@+id/btnMakeApplication"
        style="@style/MyButtonMain"
        android:layout_width="300dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/btn_create_applying"
        android:theme="@style/MyButtonMain" />
</LinearLayout>