<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_Constraint_Layout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/layout_Dialog"
        android:background="@drawable/custom_bkg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Заголовок окна-->
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/tittle_d"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_bkg"
            android:textColor="@color/background"
            android:padding="12dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/title_alert_d"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"/>

        <!--Ввод почты-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_rest_input"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_marginBottom="40dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tittle_d"
            android:hint="@string/sing_in_hint_email"
            style="@style/MyTextField">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_reset_edit"
                android:padding="0dp"
                android:layout_width="match_parent"
                android:autofillHints="emailAddress"
                android:textAlignment="viewStart"
                style="@style/MyEditText.Email"  />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/close_btn"
            style="@style/ResetPasswordTextView"
            android:text="@string/btn_close_text"
            android:layout_marginStart="95dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_rest_input"/>

        <TextView
            style="@style/ResetPasswordTextView"
            android:id="@+id/reset_btn"
            android:layout_marginStart="20dp"
            android:text="@string/btn_reset_text"
            app:layout_constraintStart_toEndOf="@id/close_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_rest_input"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>