<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_Constraint_Layout_1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/layout_Dialog"
        android:background="@drawable/custom_bkg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Заголовок окна-->
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/tittle_d"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_bkg"
            android:textColor="@color/background"
            android:padding="12dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/dialog_text_create_order"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/email_rest_input"
            style="@style/BottomSheetTextView.Main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="@string/dialog_text_create_order1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tittle_d"/>

        <TextView
            android:id="@+id/btnGood"
            style="@style/ResetPasswordTextView"
            android:text="@string/btn_dialog_create"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@+id/email_rest_input"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>